--- a/SensorsAnalyticsSDK/HelloSensorsAnalytics/JSCallOC.html
+++ b/SensorsAnalyticsSDK/HelloSensorsAnalytics/JSCallOC.html
@@ -36,4 +36,9 @@
             },1000);
                     
             </script>
-        <div id='buttons'></div
+        <div id='buttons'></div>
+        <div id='log'></div>
+        <input type="button" value="Call" onclick="call_app('哈哈，小提示用我');" />
+        <a href="sensorsanalytics://getAppInfo">打通</a>
+    </body>
+</html>
